--- a/src/output.css
+++ b/src/output.css
@@ -562,36 +562,28 @@ video {
   margin-bottom: 70px;
 }
 
-.mb-\[0px\] {
-  margin-bottom: 0px;
-}
-
-.mb-\[40px\] {
-  margin-bottom: 40px;
-}
-
 .flex {
   display: flex;
-}
-
-.h-\[100vh\] {
-  height: 100vh;
-}
-
-.h-\[10vh\] {
-  height: 10vh;
-}
-
-.h-\[160vh\] {
-  height: 160vh;
 }
 
 .h-\[130vh\] {
   height: 130vh;
 }
 
-.w-\[80\%\] {
-  width: 80%;
+.h-\[20vh\] {
+  height: 20vh;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[200\] {
+  height: 200;
+}
+
+.h-\[200vh\] {
+  height: 200vh;
 }
 
 .items-center {
@@ -611,9 +603,9 @@ video {
   background-color: rgb(254 251 241 / var(--tw-bg-opacity, 1));
 }
 
-.px-\[40px\] {
-  padding-left: 40px;
-  padding-right: 40px;
+.px-\[80px\] {
+  padding-left: 80px;
+  padding-right: 80px;
 }
 
 .py-\[100px\] {
@@ -621,9 +613,13 @@ video {
   padding-bottom: 100px;
 }
 
-.px-\[80px\] {
-  padding-left: 80px;
-  padding-right: 80px;
+.px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.pl-\[20px\] {
+  padding-left: 20px;
 }
 
 .text-\[11px\] {
@@ -638,8 +634,24 @@ video {
   font-size: 32px;
 }
 
-.text-\[80px\] {
-  font-size: 80px;
+.text-\[40px\] {
+  font-size: 40px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[2px\] {
+  font-size: 2px;
+}
+
+.text-\[25px\] {
+  font-size: 25px;
+}
+
+.text-\[22px\] {
+  font-size: 22px;
 }
 
 .text-\[\#703412\] {
@@ -647,6 +659,37 @@ video {
   color: rgb(112 52 18 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\] {
+  color: ;
+}
+
 *{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@media (min-width: 1024px) {
+  .lg\:h-\[10vh\] {
+    height: 10vh;
+  }
+
+  .lg\:h-\[130vh\] {
+    height: 130vh;
+  }
+
+  .lg\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .lg\:px-\[80px\] {
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+
+  .lg\:text-\[80px\] {
+    font-size: 80px;
+  }
+
+  .lg\:text-\[32px\] {
+    font-size: 32px;
+  }
 }
